--- a/src/lang.yml
+++ b/src/lang.yml
@@ -238,7 +238,7 @@ lang:
   
   
     translated-by: "ItsRea1Pers0n y Ale2512"
-    translator-url: "https://github.com/ItsRealPerson"
+    translator-url: "https://github.com/ItsRealPerson and https://github.com/ralx25"
     command:
       set:
         set-affinity: "Se estableció la dificultad %difficulty% a %user% con %number% Puntos de Afinidad"
